# multiprofit

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.rst  pyproject.toml  requirements.txt
doc/: index.rst
doc/lsst.multiprofit/: catalog_fitting.rst  getting_started.rst  index.rst  model_configs.rst
python/lsst/multiprofit/: __init__.py  componentconfig.py  errors.py  limits.py  model_utils.py  modelconfig.py  modeller.py  observationconfig.py  priors.py  psfmodel_utils.py  sourceconfig.py  transforms.py  utils.py
python/lsst/multiprofit/fitting/: __init__.py  fit_bootstrap_model.py  fit_catalog.py  fit_psf.py  fit_source.py
python/lsst/multiprofit/plotting/: __init__.py  asinhstretchsigned.py  config.py  errorvalues.py  plot_catalog_bootstrap.py  plot_loglike.py  plot_model_rgb.py  plot_model_singleband.py  plot_sersicmix_interp.py  reference_data.py  types.py
tests/: test_componentconfig.py  test_fit_bootstrap_model.py  test_fit_psf.py  test_fit_source.py  test_modelconfig.py  test_modeller.py  test_observationconfig.py  test_plotting.py  test_sourceconfig.py
ups/: multiprofit.table
